fixed color of menu on mobile

--- a/main_app/static/css/collection-detail.css
+++ b/main_app/static/css/collection-detail.css
@@ -178,6 +178,6 @@
   }
   .set-cover-btn,
   .selected {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
